Make implied universal selectors be equivalent to ns|* where ns is the default namespace, and make appropriate changes to our CSS files.  This brings us into conformance with the CSS3 selectors draft and improves performance by reducing the number of universally hashed selectors.  Most of this patch is by attinasi. (35847, 83482)  Also make first-node/last-node rules in quirks.css non-universal to improve performance. (83839)  r=rbs  sr=waterson  a=asa  b=35847